force-app/main/default/objects/Innova_Application_Software__c/Innova_Application_Software__c.object-meta.xml
<CustomObject>
    <label>Applications/Software</label>
    <nameField>
        <label>Applications/Software Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications/Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>