force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Innova_Access_Level__c</fullName>
    <label>Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>