force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Add__c.field-meta.xml
<CustomField>
    <fullName>Innova_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add</label>
    <type>Checkbox</type>
</CustomField>