force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Delete__c.field-meta.xml
<CustomField>
    <fullName>Innova_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>