force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Description_of_the_Request__c.field-meta.xml
<CustomField>
    <fullName>Innova_Description_of_the_Request__c</fullName>
    <label>Description of the Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>