force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Edit__c.field-meta.xml
<CustomField>
    <fullName>Innova_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>