force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Foundational_access__c.field-meta.xml
<CustomField>
    <fullName>Innova_Foundational_access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foundational Data Access</label>
    <type>Checkbox</type>
</CustomField>