force-app/main/default/objects/Innova_Application_Software__c/fields/Innova_Requires_IT_Approval__c.field-meta.xml
<CustomField>
    <fullName>Innova_Requires_IT_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires IT Approval</label>
    <type>Checkbox</type>
</CustomField>