force-app/main/default/objects/Innova_Application_Software__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Innova_Requires_IT_Approval__c</columns>
    <columns>Innova_Description_of_the_Request__c</columns>
    <columns>Innova_Foundational_access__c</columns>
    <columns>Innova_Brand__c</columns>
    <columns>Innova_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>